1999-05-23  Roland McGrath  <roland@baalperazim.frob.com>

	* remap.c (remap_open): Don't multiply by 512.  Offsets and sizes are
	in blocks, not bytes.

	* stripe.c (concat_decode): Add __attribute__((unused)) to suppress
	warning.
	(ileave_decode): Likewise.

	* bunzip2.c: Add extern decl for do_bunzip2.

1999-05-16  Roland McGrath  <roland@baalperazim.frob.com>

	* remap.c (remap_decode): Add attribute((unused)) to suppress warning.

1999-05-14  Roland McGrath  <roland@baalperazim.frob.com>

	* remap.c (remap_open, remap_validate_name): New functions, to support
	parsing block lists a la GRUB.
	(store_remap_class): Initialize those slots.

1999-05-01  Mark Kettenis  <kettenis@gnu.org>

	* device.c (store_device_create): Deal with devices that return
	sucessfully from device_get_status, but do not return any sensible
	information.

1998-09-06  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* bunzip2.c: New file.
	* store.h (store_bunzip2_create): New declarations.
	(store_bunzip2_open): Likewise.
	(store_bunzip2_class): Likewise.
	* std.c (store_std_classes): Add store_bunzip2_class.
	* Makefile (SRCS): Add bunzip2.c.
	(UNZIP_OBJS): Add do-bunzip2.o.

1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>

	* store.h: Remove defns of STORAGE_*, now in <hurd/hurd_types.h>.

1998-12-21  Roland McGrath  <roland@baalperazim.frob.com>

	* open.c (store_open): Like file.c:fiopen, catch EACCES or EROFS
	and try to open read-only.

	* file.c (fiopen): Treat EROFS same as EACCES.

1998-10-20  Roland McGrath  <roland@baalperazim.frob.com>

	* flags.c (store_clear_flags): Add braces to silence gcc warning.

1998-10-19  Roland McGrath  <roland@baalperazim.frob.com>

	* rdwr.c (store_read): Add braces to silence gcc warning.
	* flags.c (store_set_flags): Likewise.
	* typed.c (store_typed_open): Likewise.
	* decode.c (store_decode): Likewise.
	* argp.c (store_parsed_append_args): Likewise.
	(store_parsed_name): Likewise.
	(store_parsed_open): Likewise.
